@@ -1,5 +1,6 @@
 1.2-17:
 * Added options for enabling/disabling columns in a more standardized way.
+* Added a command for starting a new segment manually, /skada newsegment.
 
 1.2-16:
 * Interrupts and Dispels modes now show the owner for pets.
